# Fiber-Matrix-SVE-Generator

./: .gitignore  README.md  build_docs.py  mkdocs.yml  pyproject.toml  requirements.txt  rve.py  test_mesh.msh  test_mesh.vtk  verification.py
archive/: README.md
archived_src/: __init__.py  rve.py
docs/: 3d_meshing.md  index.md  offline.md
docs/api/: generation.md  meshing.md  meshing_3d.md  models.md  rve.md  visualization.md
examples/: README.md  finite_hex_rve.py  finite_square_rve.py  periodic_hex_rve.py  periodic_square_rve.py  periodic_square_rve_3d.py  periodic_square_rve_3d_mesh_from_distribution.py  periodic_square_rve_3d_save_distribution.py
fiber_matrix/: __init__.py  rve.py
fiber_matrix/generation/: placement.py
fiber_matrix/meshing/: __init__.py  gmsh_mesher.py  gmsh_mesher_3d.py
fiber_matrix/models/: boundary.py  fiber.py
fiber_matrix/visualization/: plotting.py
tests/: check_mesh.py  test_final_fiber_centers.npy  test_initial_fiber_centers.npy  verification.py
